[package]
name = "hdwallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
sha256 = "1.0.3"
hmac = "0.12.1"
getrandom = { version = "0.2", features = ["js"] }
sha2 = "0.10.5"
hex-literal = "0.3.4"
pbkdf2 = "0.11.0"
bs58 = { version = "0.4.0", features = ["check"] }
k256 = { version = "0.12.0", features = ["ecdsa", "schnorr","ecdsa-core","arithmetic"] }
ripemd = "0.1.1"
regex = "1.6.0"
sha3 = "0.10.4"
ed25519-dalek = "1.0.1"
serde_derive = "1.0.144"
rlp = "0.5.1"
lazy-static-include = "3.1.2"
tiny-keccak = { version = "2.0.0", features = ["sha3","keccak"] }
ecdsa= { version = "0.15.1", features = ["hazmat"] }